# CLIScript

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
CLIScript/: __init__.py  cli.py  test_utils.py
CLIScript/script/: core.py
